# NeptusEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
Editor/: CMakeLists.txt
Editor/Include/: Editor.hpp  EditorCamera.hpp  ImGui.hpp  Widgets.hpp
Editor/Source/: Editor.cpp  EditorCamera.cpp  ImGui.cpp  Widgets.cpp
Neptus/: CMakeLists.txt
Neptus/Assets/Models/SampleCube/: SampleCube.blend  SampleCube.blend1  SampleCube.mtl
Neptus/Assets/Shaders/: model.glsl  screen.glsl
Neptus/Include/: NeptusEngine.hpp
Neptus/Include/Core/: API.hpp  Asset.hpp  Base.hpp  Engine.hpp  UUID.hpp
Neptus/Include/Core/OS/: Filesystem.hpp  Window.hpp
Neptus/Include/Graphics/: GraphicsContext.hpp  Model.hpp  RenderPasses.hpp  ScreenSurface.hpp
Neptus/Include/Graphics/RHI/: BufferLayout.hpp  Definitions.hpp  Framebuffer.hpp  GLDefinitions.hpp  IndexBuffer.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  VertexArrayBuffer.hpp  VertexBuffer.hpp
Neptus/Include/Scene/: Entity.hpp  Scene.hpp  SceneManager.hpp
Neptus/Include/Scene/Components/: BaseComponent.hpp  IDComponent.hpp  ModelComponent.hpp  TagComponent.hpp  TransformComponent.hpp
Neptus/Include/Scene/Systems/: BaseSystem.hpp  SystemManager.hpp
Neptus/Include/Utils/: Clock.hpp  LoadImage.hpp  ResourceManager.hpp  StringProcessing.hpp  Timer.hpp  Timestep.hpp
Neptus/Source/Core/: Engine.cpp  UUID.cpp
Neptus/Source/Core/OS/: Filesystem.cpp  Window.cpp
Neptus/Source/Graphics/: GraphicsContext.cpp  Model.cpp  RenderPasses.cpp  ScreenSurface.cpp
Neptus/Source/Graphics/RHI/: BufferLayout.cpp
Neptus/Source/Graphics/RHI/OpenGL/: GLFramebuffer.cpp  GLIndexBuffer.cpp  GLRenderer.cpp  GLShader.cpp  GLTexture.cpp  GLVertexArrayBuffer.cpp  GLVertexBuffer.cpp
Neptus/Source/Scene/: Scene.cpp  SceneManager.cpp
Neptus/Source/Utils/: Clock.cpp  LoadImage.cpp  ResourceManager.cpp  StringProcessing.cpp  Timer.cpp  Timestep.cpp
Runtime/: CMakeLists.txt
Runtime/Include/: Application.hpp
Runtime/Source/: Application.cpp
Runtime/Windows/: WindowsLaunch.cpp
